--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "reactjs-popup": "^2.0.5"
+    "react-slick": "^0.29.0",
+    "reactjs-popup": "^2.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
