--- a/projects.json
+++ b/projects.json
@@ -8,8 +8,24 @@
       "en": "Accommodation rental platform built with React"
     },
     "descriptionLong": {
-      "fr": "Construit avec create-react-app et react-router, récupération simulée des annonces d'appartements depuis une API, pages individuelles pour chaque appartement, composants réutilisables (bannière, tags, cartes, carousel), carousel réactif différent sur mobile et bureau, filtre déroulant sur les pages Apartment et About, reproduction du design à partir d'une maquette Figma.",
-      "en": "Built with create-react-app and react-router, Simulated API fetch for apartment listings, Individual pages for each apartment, Reusable components (banner, tags, cards, carousel), Responsive carousel differing on mobile and desktop, Dropdown filter on Apartment and About pages, Design replication from a Figma maquette."
+      "fr": [
+        {"id": "p1_fr_1", "text": "Construit avec create-react-app et react-router"},
+        {"id": "p1_fr_2", "text": "Récupération simulée des annonces d'appartements depuis une API"},
+        {"id": "p1_fr_3", "text": "Pages individuelles pour chaque appartement"},
+        {"id": "p1_fr_4", "text": "Composants réutilisables (bannière, tags, cartes, carousel)"},
+        {"id": "p1_fr_5", "text": "Carousel réactif différent sur mobile et bureau"},
+        {"id": "p1_fr_6", "text": "Filtre déroulant sur les pages Apartment et About"},
+        {"id": "p1_fr_7", "text": "Reproduction du design à partir d'une maquette Figma"}
+      ],
+      "en": [
+        {"id": "p1_en_1", "text": "Built with create-react-app and react-router"},
+        {"id": "p1_en_2", "text": "Simulated API fetch for apartment listings"},
+        {"id": "p1_en_3", "text": "Individual pages for each apartment"},
+        {"id": "p1_en_4", "text": "Reusable components (banner, tags, cards, carousel)"},
+        {"id": "p1_en_5", "text": "Responsive carousel differing on mobile and desktop"},
+        {"id": "p1_en_6", "text": "Dropdown filter on Apartment and About pages"},
+        {"id": "p1_en_7", "text": "Design replication from a Figma maquette"}
+      ]
     },
     "githubLink": "https://github.com/voidermalie/kasa2",
     "liveDemo": "https://voidermalie.github.io/kasa2"
@@ -23,8 +39,22 @@
       "en": "An e-commerce platform offering a dynamic shopping experience with a persistent shopping cart."
     },
     "descriptionLong": {
-      "fr": "Entièrement construit en JavaScript natif, récupération dynamique des produits depuis une API, manipulation du DOM pour l'affichage des produits, panier d'achat fonctionnel avec sélection de couleur et de quantité, expérience d'achat persistante avec localStorage, mises à jour en temps réel du panier pour la quantité totale et le montant total dû.",
-      "en": "Built entirely in vanilla JavaScript, Dynamic product fetching from API, DOM manipulation for product display, Functional shopping cart with color and quantity selection, Persistent shopping experience with localStorage, Real-time cart updates for total quantity and total amount due."
+      "fr": [
+        {"id": "p2_fr_1", "text": "Entièrement construit en JavaScript natif"},
+        {"id": "p2_fr_2", "text": "Récupération dynamique des produits depuis une API"},
+        {"id": "p2_fr_3", "text": "Manipulation du DOM pour l'affichage des produits"},
+        {"id": "p2_fr_4", "text": "Panier d'achat fonctionnel avec sélection de couleur et de quantité"},
+        {"id": "p2_fr_5", "text": "Expérience d'achat persistante avec localStorage"},
+        {"id": "p2_fr_6", "text": "Mises à jour en temps réel du panier pour la quantité totale et le montant total dû"}
+      ],
+      "en": [
+        {"id": "p2_en_1", "text": "Built entirely in vanilla JavaScript"},
+        {"id": "p2_en_2", "text": "Dynamic product fetching from API"},
+        {"id": "p2_en_3", "text": "DOM manipulation for product display"},
+        {"id": "p2_en_4", "text": "Functional shopping cart with color and quantity selection"},
+        {"id": "p2_en_5", "text": "Persistent shopping experience with localStorage"},
+        {"id": "p2_en_6", "text": "Real-time cart updates for total quantity and total amount due"}
+      ]
     },
     "githubLink": "https://github.com/voidermalie/kanap-front",
     "liveDemo": "https://kanap-front-eta.vercel.app/"
@@ -38,8 +68,22 @@
       "en": "An interactive, mobile-first food reservation site featuring lively CSS animations."
     },
     "descriptionLong": {
-      "fr": "Design axé sur les appareils mobiles, animations dynamiques avec des keyframes et des transitions CSS, spinner de chargement de page, animations déclenchées par des actions (hover, clic), adaptation aux différentes tailles d'écran, reproduction du design à partir d'une maquette.",
-      "en": "Mobile-first design, Dynamic CSS keyframe and transition animations, Page load spinner, Action-triggered animations (hover, click), Responsive to various screen sizes, Design replication from a maquette."
+      "fr": [
+        {"id": "p3_fr_1", "text": "Design axé sur les appareils mobiles"},
+        {"id": "p3_fr_2", "text": "Animations dynamiques avec des keyframes et des transitions CSS"},
+        {"id": "p3_fr_3", "text": "Spinner de chargement de page"},
+        {"id": "p3_fr_4", "text": "Animations déclenchées par des actions (hover, clic)"},
+        {"id": "p3_fr_5", "text": "Adaptation aux différentes tailles d'écran"},
+        {"id": "p3_fr_6", "text": "Reproduction du design à partir d'une maquette"}
+      ],
+      "en": [
+        {"id": "p3_en_1", "text": "Mobile-first design"},
+        {"id": "p3_en_2", "text": "Dynamic CSS keyframe and transition animations"},
+        {"id": "p3_en_3", "text": "Page load spinner"},
+        {"id": "p3_en_4", "text": "Action-triggered animations (hover, click)"},
+        {"id": "p3_en_5", "text": "Responsive to various screen sizes"},
+        {"id": "p3_en_6", "text": "Design replication from a maquette"}
+      ]
     },
     "githubLink": "https://github.com/voidermalie/ohmyfood",
     "liveDemo": "https://voidermalie.github.io/ohmyfood"
@@ -53,8 +97,22 @@
       "en": "A responsive accommodation booking website with a clean layout and organized content."
     },
     "descriptionLong": {
-      "fr": "Design responsive, structure HTML sémantique, fonctionnalité de recherche et de filtrage simulée, cartes interactives d'informations sur les hôtels, points forts des principaux sites touristiques, reproduction du design à partir d'une maquette.",
-      "en": "Responsive design, Semantic HTML structure, Simulated search and filter functionality, Interactive information cards for hotels, Highlights of key sightseeing spots, Design replication from a maquette."
+      "fr": [
+        {"id": "p4_fr_1", "text": "Design responsive"},
+        {"id": "p4_fr_2", "text": "Structure HTML sémantique"},
+        {"id": "p4_fr_3", "text": "Fonctionnalité de recherche et de filtrage simulée"},
+        {"id": "p4_fr_4", "text": "Cartes interactives d'informations sur les hôtels"},
+        {"id": "p4_fr_5", "text": "Points forts des principaux sites touristiques"},
+        {"id": "p4_fr_6", "text": "Reproduction du design à partir d'une maquette"}
+      ],
+      "en": [
+        {"id": "p4_en_1", "text": "Responsive design"},
+        {"id": "p4_en_2", "text": "Semantic HTML structure"},
+        {"id": "p4_en_3", "text": "Simulated search and filter functionality"},
+        {"id": "p4_en_4", "text": "Interactive information cards for hotels"},
+        {"id": "p4_en_5", "text": "Highlights of key sightseeing spots"},
+        {"id": "p4_en_6", "text": "Design replication from a maquette"}
+      ]
     },
     "githubLink": "https://github.com/voidermalie/booki",
     "liveDemo": "https://voidermalie.github.io/booki"
@@ -68,8 +126,22 @@
       "en": "A secure culinary review platform with user registration, recipe publishing, and rating functionalities"
     },
     "descriptionLong": {
-      "fr": "Une API REST sécurisée avec actions CRUD. Inscription et connexion des utilisateurs, possibilité pour les utilisateurs de publier des recettes de sauces piquantes, système de notation pour les recettes, construit avec Express.js, MongoDB, Mongoose et multer pour la gestion des données, sécurité renforcée avec bcrypt, jsonwebtoken, helmet et dotenv.",
-      "en": "Secure REST API with CRUD actions. User registration and login, Ability for users to publish hot sauce recipes, Rating system for recipes, Built with Express.js, MongoDB, Mongoose and multer for data handling, Enhanced security with bcrypt, jsonwebtoken, helmet, and dotenv."
+      "fr": [
+        {"id": "p5_fr_1", "text": "Une API REST sécurisée avec actions CRUD"},
+        {"id": "p5_fr_2", "text": "Inscription et connexion des utilisateurs"},
+        {"id": "p5_fr_3", "text": "Possibilité pour les utilisateurs de publier des recettes de sauces piquantes"},
+        {"id": "p5_fr_4", "text": "Système de notation pour les recettes"},
+        {"id": "p5_fr_5", "text": "Construit avec Express.js, MongoDB, Mongoose et multer pour la gestion des données"},
+        {"id": "p5_fr_6", "text": "Sécurité renforcée avec bcrypt, jsonwebtoken, helmet et dotenv"}
+      ],
+      "en": [
+        {"id": "p5_en_1", "text": "Secure REST API with CRUD actions"},
+        {"id": "p5_en_2", "text": "User registration and login"},
+        {"id": "p5_en_3", "text": "Ability for users to publish hot sauce recipes"},
+        {"id": "p5_en_4", "text": "Rating system for recipes"},
+        {"id": "p5_en_5", "text": "Built with Express.js, MongoDB, Mongoose and multer for data handling"},
+        {"id": "p5_en_6", "text": "Enhanced security with bcrypt, jsonwebtoken, helmet, and dotenv"}
+      ]
     },
     "githubLink": "https://github.com/voidermalie/hottakes-back",
     "liveDemo": "https://hottakes-front.vercel.app/"
@@ -83,8 +155,18 @@
       "en": "A successfully optimized website adhering to best practices in SEO, accessibility, and performance."
     },
     "descriptionLong": {
-      "fr": "Optimisé pour le référencement et l'accessibilité selon les règles WCAG, performances améliorées vérifiées par les outils Lighthouse et Wave de Google, vérification des contrastes pour une meilleure visibilité, scores SEO, accessibilité et performances améliorés à 100, 100 et 98 respectivement.",
-      "en": "Optimized for SEO and accessibility to WCAG rules, Improved performance verified by Google's Lighthouse and Wave tools, Contrast checks for improved visibility, Boosted SEO, accessibility and performance scores to 100, 100 and 98 respectively."
+      "fr": [
+        {"id": "p6_fr_1", "text": "Optimisé pour le référencement et l'accessibilité selon les règles WCAG"},
+        {"id": "p6_fr_2", "text": "Performances améliorées vérifiées par les outils Lighthouse et Wave de Google"},
+        {"id": "p6_fr_3", "text": "Vérification des contrastes pour une meilleure visibilité"},
+        {"id": "p6_fr_4", "text": "Scores SEO, accessibilité et performances améliorés à 100, 100 et 98 respectivement"}
+      ],
+      "en": [
+        {"id": "p6_en_1", "text": "Optimized for SEO and accessibility to WCAG rules"},
+        {"id": "p6_en_2", "text": "Improved performance verified by Google's Lighthouse and Wave tools"},
+        {"id": "p6_en_3", "text": "Contrast checks for improved visibility"},
+        {"id": "p6_en_4", "text": "Boosted SEO, accessibility and performance scores to 100, 100 and 98 respectively"}
+      ]
     },
     "githubLink": "https://github.com/voidermalie/panthera_new",
     "liveDemo": "https://voidermalie.github.io/panthera_new/"
